main/production/namespaces/istio-system/istio-ingress/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-fe
spec:
  hosts:
  - "fundhub.titanio.xyz"
  gateways:
  - frontend-gateway
  http:
  - name: "fundhub-app"
    route: 
    - destination:
        host: fundhub-client-svc.frontend.svc.cluster.local
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-fe-dashboard
spec:
  hosts:
  - "fundhubdashboard.titanio.xyz"
  gateways:
  - frontend-gateway
  http:
  - name: "dashboard-app"
    route: 
    - destination:
        host: fundhub-dashboard-svc.frontend.svc.cluster.local
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-be
spec:
  hosts:
  - "fundhubapi.titanio.xyz"
  gateways:
  - backend-gateway
  http:
  - name: "fundhub-api-prod"
    route: 
    - destination:
        host: fundhub-api-svc.backend.svc.cluster.local
---

# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: virtual-service-grafana
# spec:
#   hosts:
#   - "grafana.titanio.xyz"
#   gateways:
#   - monitoring-gateway
#   http:
#   - name: "grafana-monitoring"
#     route: 
#     - destination:
#         host: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
# ---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-weave
spec:
  hosts:
  - "weave.titanio.xyz"
  gateways:
  - monitoring-gateway
  http:
  - name: "weave-monitoring"
    route:
    - destination:
        host: ww-gitops-weave-gitops.tools.svc.cluster.local
        port:
          number: 9001
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-kiali
spec:
  hosts:
  - "kiali.titanio.xyz"
  gateways:
  - monitoring-gateway
  http:
  - name: "kiali-monitoring"
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
